refactor: replace `Stream.collector(Collectors.toList())` to `Stream.toList()`
Signed-off-by: Maximillian Arruda <maximillian.arruda@MBP-de-Digibee.local>