@@ -30,7 +30,6 @@ import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 import static java.util.Objects.requireNonNull;
 
@@ -83,7 +82,7 @@ public class MongoDBDocumentConfiguration implements DocumentConfiguration {
                 .map(Object::toString)
                 .map(HostPortConfiguration::new)
                 .map(HostPortConfiguration::toServerAddress)
-                .collect(Collectors.toList());
+                .toList();
 
         if (servers.isEmpty()) {
             Optional<ConnectionString> connectionString = settings
